# mf-kernels

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench.sh  results.csv
.github/workflows/: ci.yml
asm/: README.md
bench/: bench_sumfact.cpp
benchmarks/mfem-comparison/: .gitignore  ANTIGRAVITY_PROMPTS.md  Makefile  README.md  WRITEUP.md  kolev_email_draft.txt  methodology_flags.md
benchmarks/mfem-comparison/include/: bp_operator.hpp  evenodd_rect.hpp  numerics.hpp
benchmarks/mfem-comparison/results/: diff_bp1_avx2.txt  diff_bp1_blocked.txt  diff_bp1_evenodd.txt  diff_bp1_naive.txt  diff_bp3_avx2.txt  diff_bp3_blocked.txt  diff_bp3_evenodd.txt  diff_bp3_naive.txt  env.txt  mfem.csv  mfk.csv
benchmarks/mfem-comparison/scripts/: build.sh  env_capture.sh  plots.py  run.sh
benchmarks/mfem-comparison/src/: bench_bp.cpp  diff_bp.cpp  mfem_bp.cpp  validate_bp.cpp
include/mfk/: aligned_buffer.hpp  apply_1d.hpp  benchmark.hpp  tensor_product.hpp
tests/: test_correctness.cpp
